Adds mailchimp block.

--- a/index.html
+++ b/index.html
@@ -41,6 +41,29 @@
             </p>
           </div>
 
+          <div class="mailing-list">
+              <form action="//pepyatka.us8.list-manage.com/subscribe/post?u=b449ae49f1135a3babcefdac8&amp;id=a0d143e5a5" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate form-inline" target="_blank" novalidate="novalidate">
+
+	        <h3>Or subscribe to the mailing list</h3>
+                <div class="mc-field-group">
+                  <div class="form-group">
+	            <label for="mce-EMAIL">Email Address </label>
+	            <input type="email" value="" name="EMAIL" class="required email form-control" id="mce-EMAIL">
+                  </div>
+                  <div class="form-group">
+                    <div class="input-group">
+                      <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="btn btn-default">
+                    </div>
+                  </div>
+                </div>
+	        <div id="mce-responses" class="clear">
+		  <div class="response" id="mce-error-response" style="display:none"></div>
+		  <div class="response" id="mce-success-response" style="display:none"></div>
+	        </div>
+                <div style="position: absolute; left: -5000px;"><input type="text" name="b_b449ae49f1135a3babcefdac8_a0d143e5a5" tabindex="-1" value=""></div>
+              </form>
+          </div>
+
           <div class="mastfoot">
             <div class="inner">
               <p>Build with love by <a href="https://friendfeed.com/epicmonkey">epicmonkey@frf</a>.</p>
