--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
           <div class="mailing-list">
               <form action="//pepyatka.us8.list-manage.com/subscribe/post?u=b449ae49f1135a3babcefdac8&amp;id=a0d143e5a5" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate form-inline" target="_blank" novalidate="novalidate">
 
-	        <h3>Or subscribe to the mailing list</h3>
+                <h3>Or subscribe to the mailing list</h3>
                 <div class="mc-field-group">
                   <div class="form-group">
-	            <label for="mce-EMAIL">Email Address </label>
-	            <input type="email" value="" name="EMAIL" class="required email form-control" id="mce-EMAIL">
+                    <label for="mce-EMAIL">Email Address </label>
+                    <input type="email" value="" name="EMAIL" class="required email form-control" id="mce-EMAIL">
                   </div>
                   <div class="form-group">
                     <div class="input-group">
@@ -56,10 +56,10 @@
                     </div>
                   </div>
                 </div>
-	        <div id="mce-responses" class="clear">
-		  <div class="response" id="mce-error-response" style="display:none"></div>
-		  <div class="response" id="mce-success-response" style="display:none"></div>
-	        </div>
+                <div id="mce-responses" class="clear">
+                  <div class="response" id="mce-error-response" style="display:none"></div>
+                  <div class="response" id="mce-success-response" style="display:none"></div>
+                </div>
                 <div style="position: absolute; left: -5000px;"><input type="text" name="b_b449ae49f1135a3babcefdac8_a0d143e5a5" tabindex="-1" value=""></div>
               </form>
           </div>
@@ -75,5 +75,15 @@
 
   <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-43286504-3', 'auto');
+    ga('send', 'pageview');
+  </script>
 </body>
 </html>
