Adds build page.

--- a/builds.html
+++ b/builds.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="font-awesome.min.css" />
   <link href="morda.css" media="screen" rel="stylesheet" type="text/css" />
   <link rel="shortcut icon" href="favicon.png" />
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 </head>
 <body>
   <div class="site-wrapper">
@@ -27,42 +28,18 @@
           </div>
 
           <div class="inner cover">
-            <h1 class="cover-heading">Pepyatka is the easiest way to
-              share online</h1>
+            <h1 class="cover-heading">Pepyatka Builds</h1>
 
-            <p class="lead">Pepyatka is an open source FriendFeed
-              clone (yes, it is free and open!). Basically, this is a
-              social real-time feed aggregator that allows you to
-              share cute kittens, coordinate upcoming events, discuss
-              any other cool stuff on the Internet or setup a private
-              Pepyatka instance in your company.</p>
+            <p class="lead">At this point Pepyatka has no stable
+              versions, however it has two other exciting options! You
+              can run unstable build (the latest version is 0.1.0) and
+              you can run nightly builds just click
+              on <a href="https://amadina.pepyatka.com">amadina
+              below!</a></p>
 
             <p class="lead">
               <a href="https://try.pepyatka.com" class="btn btn-lg btn-default">Try Pepyatka!</a>
             </p>
-          </div>
-
-          <div class="mailing-list">
-              <form action="//pepyatka.us8.list-manage.com/subscribe/post?u=b449ae49f1135a3babcefdac8&amp;id=a0d143e5a5" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate form-inline" target="_blank" novalidate="novalidate">
-
-                <h3>Or subscribe to the mailing list</h3>
-                <div class="mc-field-group">
-                  <div class="form-group">
-                    <label for="mce-EMAIL">Email Address </label>
-                    <input type="email" value="" name="EMAIL" class="required email form-control" id="mce-EMAIL">
-                  </div>
-                  <div class="form-group">
-                    <div class="input-group">
-                      <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="btn btn-default">
-                    </div>
-                  </div>
-                </div>
-                <div id="mce-responses" class="clear">
-                  <div class="response" id="mce-error-response" style="display:none"></div>
-                  <div class="response" id="mce-success-response" style="display:none"></div>
-                </div>
-                <div style="position: absolute; left: -5000px;"><input type="text" name="b_b449ae49f1135a3babcefdac8_a0d143e5a5" tabindex="-1" value=""></div>
-              </form>
           </div>
 
           <div class="mastfoot">
@@ -70,11 +47,15 @@
               <p>Build with love by <a href="https://friendfeed.com/epicmonkey">epicmonkey@frf</a>.</p>
             </div>
           </div>
+
+          <div id="bird">
+            <div id="bg"></div>
+            <a href="https://amadina.pepyatka.com"><img src="/bird.png"/></a>
+          </div>
         </div>
       </div>
     </div>
 
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 
   <script>
