Replaces try to amadina on builds page.

--- a/builds.html
+++ b/builds.html
@@ -38,7 +38,7 @@
               below!</a></p>
 
             <p class="lead">
-              <a href="https://try.pepyatka.com" class="btn btn-lg btn-default">Try Pepyatka!</a>
+              <a href="https://amadina.pepyatka.com" class="btn btn-lg btn-default">Nightly Pepyatka!</a>
             </p>
           </div>
 
