Changes https to http for the time being.

--- a/builds.html
+++ b/builds.html
@@ -34,11 +34,11 @@
               versions, however it has two other exciting options! You
               can run unstable build (the latest version is 0.1.0) and
               you can run nightly builds just click
-              on <a href="https://amadina.pepyatka.com">amadina
+              on <a href="http://amadina.pepyatka.com">amadina
               below!</a></p>
 
             <p class="lead">
-              <a href="https://amadina.pepyatka.com" class="btn btn-lg btn-default">Nightly Pepyatka!</a>
+              <a href="http://amadina.pepyatka.com" class="btn btn-lg btn-default">Nightly Pepyatka!</a>
             </p>
           </div>
 
@@ -50,7 +50,7 @@
 
           <div id="bird">
             <div id="bg"></div>
-            <a href="https://amadina.pepyatka.com"><img src="/bird.png"/></a>
+            <a href="http://amadina.pepyatka.com"><img src="/bird.png"/></a>
           </div>
         </div>
       </div>
